@@ -3,11 +3,13 @@
 #include <ntp_assert.h>
 #include "ntp_malloc.h"
 #include <string.h>
+#include "l_stdlib.h"
+
+#define STRDUP_EMPTY_UNIT
 
 #ifndef HAVE_STRDUP
-
+# undef STRDUP_EMPTY_UNIT
 char *strdup(const char *s);
-
 char *
 strdup(
 	const char *s
@@ -24,6 +26,30 @@ strdup(
 
 	return cp;
 }
-#else
+#endif
+
+#ifndef HAVE_MEMCHR
+# undef STRDUP_EMPTY_UNIT
+void *memchr(const void *s, int c, size_t n)
+{
+	const unsignec char *p = s;
+	while (n && *p != c) {
+		--n;
+		++p;
+	}
+	return n ? p : NULL;
+}
+#endif
+
+#ifndef HAVE_STRNLEN
+# undef STRDUP_EMPTY_UNIT
+size_t strnlen(const char *s, size_t n)
+{
+	const char *e = memchr(s, 0, n);
+	return e ? (size_t)(e - s) : n;
+}
+#endif
+
+#ifdef STRDUP_EMPTY_UNIT
 int strdup_c_nonempty_compilation_unit;
 #endif
